<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <mainClass>${project.groupId}.${project.artifactId}</mainClass>
        <api.version>17</api.version>
    </properties>
    <!-- Project information -->
    <groupId>com.pablo67340.GUIShop</groupId>
    <artifactId>GUIShop</artifactId>
    <version>9.2.2</version>
    <name>GUIShop</name>
    <url>https://www.spigotmc.org/resources/guishop.2451/</url>
    <description>This plugin is the ultimate solution to all the signs, the chests, the glitches.</description>
    <!-- Organization -->
    <organization>
        <name>pablo67340</name>
        <url>https://github.com/pablo67340</url>
    </organization>
    <scm>
        <url>https://github.com/pablo67340/GUIShop</url>
        <connection>scm:git:git://github.com:pablo67340/GUIShop.git</connection>
        <developerConnection>scm:git:git@github.com:pablo67340/GUIShop.git</developerConnection>
    </scm>
    <issueManagement>
        <system>GitHub</system>
        <url>https://github.com/pablo67340/GUIShop/issues</url>
    </issueManagement>
    <distributionManagement>
        <repository>
            <id>pub-repo</id>
            <name>Public Releases</name>
            <url>http://nexus.theyeticave.net/content/repositories/pub_releases/</url>
        </repository>
        <snapshotRepository>
            <id>pub-repo</id>
            <name>Public Snapshots</name>
            <url>http://nexus.theyeticave.net/content/repositories/pub_snapshots/</url>
        </snapshotRepository>
    </distributionManagement>
    <pluginRepositories>
        <pluginRepository>
            <id>apache</id>
            <url>https://repository.apache.org/content/groups/snapshots/</url>
        </pluginRepository>
    </pluginRepositories>
    <repositories>
        <repository>
            <id>spigot-repo</id>
            <url>https://hub.spigotmc.org/nexus/content/repositories/snapshots/</url>
        </repository>
        <repository>
            <id>maven-central</id>
            <url>https://repo1.maven.org/maven2/</url>
        </repository>
        <repository>
            <id>arim-mvn-lgpl3</id>
            <url>https://mvn-repo.arim.space/lesser-gpl3/</url>
        </repository>
        <repository>
            <id>jitpack.io</id>
            <url>https://jitpack.io</url>
        </repository>
        <repository>
            <id>ess-repo</id>
            <url>https://ci.ender.zone/plugin/repository/everything/</url>
        </repository>
        <repository>
            <id>paper-repo</id>
            <url>https://papermc.io/repo/repository/maven-public/</url>
        </repository>
        <repository>
            <id>pex-repo</id>
            <url>https://repo.glaremasters.me/repository/permissionsex/</url>
        </repository>
        <repository>
            <id>minecraft-repo</id>
            <url>https://libraries.minecraft.net/</url>
        </repository>
        <repository>
            <id>placeholderapi</id>
            <url>https://repo.extendedclip.com/content/repositories/placeholderapi/</url>
        </repository>
        <repository>
            <id>codemc-repo</id>
            <url>https://repo.codemc.org/repository/maven-public/</url>
            <layout>default</layout>
        </repository>
    </repositories>
    <dependencies>
        <dependency>
            <groupId>me.clip</groupId>
            <artifactId>placeholderapi</artifactId>
            <version>2.10.9</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>com.mojang</groupId>
            <artifactId>authlib</artifactId>
            <version>1.5.21</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.spigotmc</groupId>
            <artifactId>spigot-api</artifactId>
            <version>1.21-R0.1-SNAPSHOT</version>
            <scope>provided</scope>
        </dependency>
        <!--Bukkit API -->
        <dependency>
            <groupId>com.github.milkbowl</groupId>
            <artifactId>vault</artifactId>
            <version>1.7.3</version>
        </dependency>
        <dependency>
            <groupId>com.github.stefvanschie.inventoryframework</groupId>
            <artifactId>IF</artifactId>
            <version>0.10.15</version>
        </dependency>
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <version>1.18.34</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>com.github.cryptomorin</groupId>
            <artifactId>XSeries</artifactId>
            <version>11.2.0</version>
        </dependency>
        <dependency>
            <groupId>com.google.code.findbugs</groupId>
            <artifactId>jsr305</artifactId>
            <version>3.0.2</version>
        </dependency>
        <dependency>
            <groupId>com.googlecode.json-simple</groupId>
            <artifactId>json-simple</artifactId>
            <version>1.1.1</version>
        </dependency>
        <dependency>
            <groupId>de.tr7zw</groupId>
            <artifactId>item-nbt-api-plugin</artifactId>
            <version>2.13.1</version>
        </dependency>
        <dependency>
            <groupId>com.github.amnoah</groupId>
            <artifactId>BetterReload</artifactId>
            <version>API-v1.0.0</version>
            <scope>provided</scope>
        </dependency>
    </dependencies>
    <build>
        <defaultGoal>clean install</defaultGoal>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <source>17</source>
                    <target>17</target>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-dependency-plugin</artifactId>
                <version>2.8</version>
                <executions>
                    <execution>
                        <id>copy-installed</id>
                        <phase>install</phase>
                        <goals>
                            <goal>copy</goal>
                        </goals>
                        <configuration>
                            <artifactItems>
                                <artifactItem>
                                    <groupId>${project.groupId}</groupId>
                                    <artifactId>${project.artifactId}</artifactId>
                                    <version>${project.version}</version>
                                    <type>${project.packaging}</type>
                                </artifactItem>
                            </artifactItems>
                            <outputDirectory>C:/Users/bryce/OneDrive/Desktop/GUIShop/plugins</outputDirectory>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
        <sourceDirectory>src/</sourceDirectory>
    </build>
    <profiles>
        <profile>
            <id>default</id>
            <activation>
                <activeByDefault>true</activeByDefault>
            </activation>
            <build>
                <resources>
                    <resource>
                        <directory>${project.basedir}/resources</directory>
                        <filtering>true</filtering>
                        <includes>
                            <include>plugin.yml</include>
                            <include>config.yml</include>
                            <include>shops.yml</include>
                            <include>menu.yml</include>
                            <include>cache.yml</include>
                            <include>README.txt</include>
                            <include>messages.yml</include>
                            <include>internal_messages.yml</include>
                        </includes>
                    </resource>
                    <resource>
                        <directory>${project.basedir}/resources/Dictionary</directory>
                        <filtering>true</filtering>
                        <includes>
                            <include>potion-names.txt</include>
                            <include>spawner-names.txt</include>
                            <include>material-names.txt</include>
                            <include>enchantment-names.txt</include>
                            <include>item-flags.txt</include>
                        </includes>
                    </resource>
                    <resource>
                        <directory>${project.basedir}/resources/Data</directory>
                        <filtering>true</filtering>
                        <includes>
                            <include>cache.yml</include>
                            <include>inventories.yml</include>
                        </includes>
                    </resource>
                </resources>
                <plugins>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-compiler-plugin</artifactId>
                        <version>3.10.1</version>
                        <configuration>
                            <source>17</source>
                            <target>17</target>
                            <fork>true</fork>
                            <compilerArgs>
                                <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED</arg>
                                <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED</arg>
                                <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED</arg>
                                <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED</arg>
                                <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED</arg>
                                <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED</arg>
                                <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED</arg>
                                <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED</arg>
                                <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED</arg>
                                <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.jvm=ALL-UNNAMED</arg>
                            </compilerArgs>
                            <annotationProcessorPaths>
                                <path>
                                    <groupId>org.projectlombok</groupId>
                                    <artifactId>lombok</artifactId>
                                    <version>1.18.34</version>
                                </path>
                            </annotationProcessorPaths>
                        </configuration>
                    </plugin>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-shade-plugin</artifactId>
                        <version>3.3.0</version>
                        <configuration>
                            <relocations>
                                <relocation>
                                    <pattern>com.cryptomorin.xseries</pattern>
                                    <shadedPattern>com.pablo67340.guishop.shade.xseries</shadedPattern>
                                </relocation>
                                <relocation>
                                    <pattern>com.github.stefvanschie.inventoryframework</pattern>
                                    <shadedPattern>com.pablo67340.guishop.shade.inventoryframework</shadedPattern>
                                </relocation>
                                <relocation>
                                    <pattern>de.tr7zw</pattern>
                                    <shadedPattern>com.pablo67340.guishop.shade.nbtapi</shadedPattern>
                                </relocation>
                            </relocations>
                            <artifactSet>
                                <includes>
                                    <include>com.pablo67340.GUIShop</include>
                                    <include>com.github.stefvanschie.inventoryframework:IF:jar:</include>
                                    <include>de.tr7zw:item-nbt-api-plugin:jar:</include>
                                    <include>com.github.cryptomorin:XSeries:jar:</include>
                                    <include>com.mojang:authlib:jar:</include>
                                </includes>
                            </artifactSet>
                            <filters>
                                <filter>
                                    <artifact>*:*</artifact>
                                    <excludes>
                                        <exclude>com/cryptomorin/xseries/XBiome*</exclude>
                                        <exclude>com/cryptomorin/xseries/NMSExtras*</exclude>
                                        <exclude>com/cryptomorin/xseries/NoteBlockMusic*</exclude>
                                        <exclude>com/cryptomorin/xseries/ReflectionUtils*</exclude>
                                        <exclude>com/cryptomorin/xseries/SkullCacheListener*</exclude>
                                        <exclude>com/cryptomorin/xseries/SkullUtils*</exclude>
                                        <exclude>com/cryptomorin/xseries/XBlock*</exclude>
                                        <exclude>com/cryptomorin/xseries/XEntity*</exclude>
                                        <exclude>com/cryptomorin/xseries/XItemStack*</exclude>
                                        <exclude>com/cryptomorin/xseries/XMaterialUtil*</exclude>
                                        <exclude>com/cryptomorin/xseries/messages/ActionBar*</exclude>
                                        <exclude>com/cryptomorin/xseries/messages/Titles*</exclude>
                                        <exclude>com/cryptomorin/xseries/particles/ParticleDisplay*</exclude>
                                        <exclude>com/cryptomorin/xseries/particles/XParticle*</exclude>
                                        <exclude>com/cryptomorin/xseries/unused/BossBar*</exclude>
                                        <exclude>com/cryptomorin/xseries/unused/ZEnchantment*</exclude>
                                        <exclude>fonts/*</exclude>
                                    </excludes>
                                </filter>
                            </filters>
                        </configuration>
                        <executions>
                            <execution>
                                <phase>package</phase>
                                <goals>
                                    <goal>shade</goal>
                                </goals>
                            </execution>
                        </executions>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>
</project>